<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.thehoick.evergreenflixq.HelpActivity"
    android:background="@color/light_gray">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/shadow"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="16dp"
        android:id="@+id/relativeWrapper">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/netflixFullSite"
        android:text="@string/netflix_fullsite"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/full_site"
        android:layout_below="@+id/netflixFullSite"
        android:id="@+id/netflixFullSiteImage"
        android:layout_alignParentStart="true"
        android:scaleType="fitStart"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/netflixRssLink"
        android:text="@string/netflix_rss_link"
        android:layout_below="@id/netflixFullSiteImage"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dvd_footer"
            android:layout_below="@+id/netflixRssLink"
            android:id="@+id/netflixRssLinkImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/netflixRssQueue"
            android:text="@string/netflix_queue_rss"
            android:layout_below="@id/netflixRssLinkImage"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rss_feeds"
            android:layout_below="@+id/netflixRssQueue"
            android:id="@+id/netflixRssQueueImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/netflixUrl"
            android:text="@string/netflix_rss_url"
            android:layout_below="@id/netflixRssQueueImage"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeWrapper"
        android:background="@drawable/shadow"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/evergreenConfig"
            android:text="@string/evergreen_url"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/evergreenConfig"
            android:id="@+id/evergreenConfigUrl"
            android:src="@drawable/evergreen_url"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/evergreenPaste"
            android:text="@string/evergreen_paste"
            android:layout_below="@id/evergreenConfigUrl"/>
    </RelativeLayout>

    </RelativeLayout>



</ScrollView>
